--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .block {
   background: darkgreen;
-  height: 500px;
+  height: 300px;
   display: flex;
   justify-content: center;
   align-items: center;  
@@ -10,6 +10,11 @@ h1 {
   color: aliceblue;
 }
 
-/* #github {
+p {
+  font-size: 16px;
+  color: brown;
+}
+
+#github {
   font-family: Arial, Helvetica, sans-serif;
-} */
+}
